2010-09-13  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java (ValgrindCoreParser): Handle
	warning messages.

2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/core/AbstractValgrindTextParser.java: Removed.
	* src/org/eclipse/linuxtools/valgrind/core/ValgrindParserUtils.java: New file.
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java (ValgrindCoreParser): Superclass moved to utils class. 
	(getMessage): Likewise.

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version to 0.7.0.
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java: Extract method to
	create process.

2010-06-06  Elliott Baron  <ebaron@fedoraproject.org>

	Bug #315890
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java (whichValgrind): Handle preference
	for Valgrind location here.
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java: Reformatted. 

2009-11-03  Elliott Baron  <ebaron@fedoraproject.org>

	* plugin.properties: Externalized preference page name.
	* plugin.xml: Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/core/messages.properties: Externalized/edited strings.
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java: Likewise.

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-10  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/core/LaunchConfigurationConstants.java: Changed
	launch config constant for suppression files, since it is now a list.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	Bug #285861

	* plugin.properties: Change Provider to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/core: Moved all but IValgrindMessage.