@@ -36,6 +36,9 @@ public final class LaunchConfigurationConstants {
 	public static final String ATTR_GENERAL_MAINSTACK_BOOL = PLUGIN_ID + ".GENERAL_MAINSTACK_BOOL"; //$NON-NLS-1$
 	public static final String ATTR_GENERAL_MAINSTACK = PLUGIN_ID + ".GENERAL_MAINSTACK"; //$NON-NLS-1$
 	
+	// 3.6.0 specific
+	public static final String ATTR_GENERAL_DSYMUTIL = PLUGIN_ID + ".GENERAL_DSYMUTIL"; //$NON-NLS-1$
+	
 	public static final String DEFAULT_TOOL = PluginConstants.TOOL_EXT_DEFAULT;
 	
 	public static final boolean DEFAULT_GENERAL_TRACECHILD = false;
@@ -51,4 +54,7 @@ public final class LaunchConfigurationConstants {
 	// 3.4.0 specific
 	public static final boolean DEFAULT_GENERAL_MAINSTACK_BOOL = false;
 	public static final int DEFAULT_GENERAL_MAINSTACK = 0;
+	
+	// 3.6.0 specific 
+	public static final boolean DEFAULT_GENERAL_DSYMUTIL = true; // necessary for OS X, Bug #333640
 }
