@@ -149,7 +149,7 @@ public class ValgrindLaunchConfigurationDelegate extends AbstractCLaunchDelegate
 			// call Valgrind
 			command.execute(commandArray, getEnvironment(config), workDir, valgrindLocation.toOSString(), usePty);
 			monitor.worked(3);
-			process = createNewProcess(launch, command.getProcess() ,commandArray[0]);
+			process = createNewProcess(launch, command.getProcess(), commandArray[0]);
 			// set the command line used
 			process.setAttribute(IProcess.ATTR_CMDLINE, command.getCommandLine());
 			while (!process.isTerminated()) {
@@ -333,6 +333,11 @@ public class ValgrindLaunchConfigurationDelegate extends AbstractCLaunchDelegate
 			if (useMainStack) {
 				opts.add(CommandLineConstants.OPT_MAINSTACK + EQUALS + config.getAttribute(LaunchConfigurationConstants.ATTR_GENERAL_MAINSTACK, LaunchConfigurationConstants.DEFAULT_GENERAL_MAINSTACK));
 			}
+		}
+		
+		// 3.6.0 specific
+		if (valgrindVersion == null || valgrindVersion.compareTo(ValgrindLaunchPlugin.VER_3_6_0) >= 0) {
+			opts.add(CommandLineConstants.OPT_DSYMUTIL + EQUALS + (config.getAttribute(LaunchConfigurationConstants.ATTR_GENERAL_DSYMUTIL, LaunchConfigurationConstants.DEFAULT_GENERAL_DSYMUTIL) ? YES : NO));
 		}
 		
 		List<?> suppFiles = config.getAttribute(LaunchConfigurationConstants.ATTR_GENERAL_SUPPFILES, LaunchConfigurationConstants.DEFAULT_GENERAL_SUPPFILES); 
