@@ -36,6 +36,7 @@ ValgrindOptionsTab.General=General Options
 ValgrindOptionsTab.limit_errors=Limit errors reported
 ValgrindOptionsTab.Main_stack_size=Set main thread's stack size (B):
 ValgrindOptionsTab.max_size_of_stack_frame=Max stack frame size (B):
+ValgrindOptionsTab.dsymutil=Run dsymutil (Mac OS X)
 ValgrindOptionsTab.No_options_tab_found=No options tab found for tool 
 ValgrindOptionsTab.num_callers=Callers in stack trace:
 ValgrindOptionsTab.run_freeres=Run __libc_freeres on exit
