@@ -1,3 +1,15 @@
+2011-01-06  Elliott Baron  <ebaron@fedoraproject.org>
+
+	Bug #333640
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java: Added 3.5, 3.6 version strings.
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java
+	(getValgrindArgumentsArray): Added dsymutil option. 
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/messages.properties: Likewise. 
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (createErrorOptions): Likewise.
+	(initializeFrom): Likewise.
+	(performApply): Likewise.
+	(setDefaults): Likewise.
+
 2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>
 
 	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java (launch): API changes. 
